infra/infra-dev/log-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: log-service-depl
    labels:
        app: log-service
spec:
    replicas: 1
    template:
        metadata:
            name: log-service
            labels:
                app: log-service
        spec:
            containers:
                - name: log-service
                  image: espressotrip/concept-log-service
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: log-service
