infra/infra-dev/analytic-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: analytic-api-depl
    labels:
        app: analytic-api
spec:
    replicas: 1
    template:
        metadata:
            annotations:
              config.linkerd.io/proxy-log-level: warn
            name: analytic-api
            labels:
                app: analytic-api
                deployment: acme-fast
        spec:
            containers:
                - name: analytic-api
                  image: espressotrip/concept-analytic-api
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: analytic-api

---
apiVersion: v1
kind: Service
metadata:
    name: analytic-api-srv
spec:
    selector:
        app: analytic-api
    ports:
        - port: 3000
          targetPort: 3000
          name: analytic-api
