infra/infra-dev/analytic-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: analytic-service-depl
    labels:
        app: analytic-service
spec:
    replicas: 1
    template:
        metadata:
            name: analytic-service
            labels:
                app: analytic-service
                deployment: acme-fast
        spec:
            containers:
                - name: analytic-service
                  image: espressotrip/concept-analytic-service
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: analytic-service

---
apiVersion: v1
kind: Service
metadata:
    name: analytic-service-srv
spec:
    selector:
        app: analytic-service
    ports:
        - port: 8080
          targetPort: 8080
          name: grpc
