infra/infra-dev/auth-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: auth-service-depl
    labels:
        app: auth-service
spec:
    replicas: 1
    template:
        metadata:
            name: auth-service
            labels:
                app: auth-service
        spec:
            containers:
                - name: auth-service
                  image: espressotrip/concept-auth-service
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080

            restartPolicy: Always
    selector:
        matchLabels:
            app: auth-service

---
apiVersion: v1
kind: Service
metadata:
    name: auth-service-srv
spec:
    selector:
        app: auth-service
    ports:
        - port: 8080
          targetPort: 8080
          name: auth-service-grpc
