infra/infra-dev/employee-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: employee-api-depl
    labels:
        app: employee-api
spec:
    replicas: 1
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            name: employee-api
            labels:
                app: employee-api
                deployment: acme-fast
        spec:
            containers:
                - name: employee-api
                  image: espressotrip/concept-employee-api
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: employee-api

---
apiVersion: v1
kind: Service
metadata:
    name: employee-api-srv
spec:
    selector:
        app: employee-api
    ports:
        - port: 3000
          targetPort: 3000
          name: employee-api
