infra/infra-dev/employee-dash-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: employee-dash-service-depl
    labels:
        app: employee-dash-service
spec:
    replicas: 1
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            name: employee-dash-service
            labels:
                app: employee-dash-service
                deployment: acme-fast
        spec:
            containers:
                - name: employee-dash-service
                  image: espressotrip/concept-employee-dash-service
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080

            restartPolicy: Always
    selector:
        matchLabels:
            app: employee-dash-service

---
apiVersion: v1
kind: Service
metadata:
    name: employee-dash-service-srv
spec:
    selector:
        app: employee-dash-service
    ports:
        - port: 8080
          targetPort: 8080
          name: employee-dash-service-grpc
