infra/infra-dev/task-api-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: task-api-depl
    labels:
        app: task-api
spec:
    replicas: 1
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            name: task-api
            labels:
                app: task-api
                deployment: acme-fast
        spec:
            containers:
                - name: task-api
                  image: espressotrip/concept-task-api
                  imagePullPolicy: IfNotPresent
            restartPolicy: Always
    selector:
        matchLabels:
            app: task-api

---
apiVersion: v1
kind: Service
metadata:
    name: task-api-srv
spec:
    selector:
        app: task-api
    ports:
        - port: 3000
          targetPort: 3000
          name: task-api
