infra/infra-dev/task-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: task-service-depl
    labels:
        app: task-service
spec:
    replicas: 1
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            name: task-service
            labels:
                app: task-service
                deployment: acme-fast
        spec:
            containers:
                - name: task-service
                  image: espressotrip/concept-task-service
                  imagePullPolicy: IfNotPresent
                  ports:
                      - containerPort: 8080

            restartPolicy: Always
    selector:
        matchLabels:
            app: task-service

---
apiVersion: v1
kind: Service
metadata:
    name: task-service-srv
spec:
    selector:
        app: task-service
    ports:
        - port: 8080
          targetPort: 8080
          name: task-service-grpc
