infra/infra-dev/task-web-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-web-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-web
  template:
    metadata:
      labels:
        app: task-web
    spec:
      containers:
        - name: task-web
          image: espressotrip/concept-task-web
---
apiVersion: v1
kind: Service
metadata:
  name: task-web-srv
spec:
  selector:
    app: task-web
  ports:
    - name: task-web
      port: 3000
      targetPort: 3000
