infra/infra-dev/web-ui-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: web-ui-depl
spec:
    replicas: 1
    selector:
        matchLabels:
            app: web-ui
    template:
        metadata:
            annotations:
                config.linkerd.io/proxy-log-level: warn
            labels:
                app: web-ui
        spec:
            containers:
                - name: web-ui
                  image: espressotrip/concept-auth-web
---
apiVersion: v1
kind: Service
metadata:
    name: web-ui-srv
spec:
    selector:
        app: web-ui
    ports:
        - name: web-ui
          port: 3000
          targetPort: 3000
