infra/infra-dev/concept-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: concept-ingress-srv
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: "true"
        nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
    # This section needs to be uncommented to use TLS
    tls:
        - hosts:
              - acmefast.dev
          secretName: mkcert
        # #########################################
    rules:
        - host: acmefast.dev
          http:
              paths:
                  # Auth API
                  - path: /api/auth/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: auth-api-srv
                            port:
                                number: 3000
                  # Analytics API
                  - path: /api/analytic/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: analytic-api-srv
                            port:
                                number: 3000

                  # Employee API
                  - path: /api/employee/?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: employee-api-srv
                            port:
                                number: 3000

                  # Auth-Web UI
                  - path: /?(.*)
                    pathType: Prefix
                    backend:
                        service:
                            name: web-ui-srv
                            port:
                                number: 3000
