infra/infra-dev/rabbit-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbit-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # This section needs to be uncommented to use TLS
#  tls:
#    - hosts:
#        - rabbit.acmefast.dev
#      secretName: mkcert
    # #########################################
  rules:
    - host: rabbit.acmefast.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbit-cluster
                port:
                  number: 15672
